--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "cloudinary-vue": "^1.2.4"
+  }
 }
